--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 
     </form>
   </body>
-    <footer><iframe data-aa="1801105" src="//ad.a-ads.com/1801105?size=728x90" style="width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;" ></iframe>
-      </footer>
+     <div class="fi_bt">
+     
+  <iframe data-aa="1801105" src="//ad.a-ads.com/1801105?size=728x90" style="width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;" ></iframe>
+            </div>
+      <footer>  </footer>
 
 </html>
